--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AmicumMobile</string>
+    <string name="logo_description">Логотип системы</string>
 </resources>
