--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">AmicumMobile</string>
     <string name="logo_description">Логотип системы</string>
+    <string name="lblExit">Выйти</string>
+    <string name="lblSettings">Настройки</string>
+    <string name="lblNotification">Уведомления</string>
+    <string name="lblCalcStops">Учет простоев</string>
+    <string name="lblMaterials">Учет материалов</string>
+    <string name="lblFillReports">Заполнить отчет</string>
+    <string name="lblOnMain">На главную</string>
+    <string name="WorkerPhoto">ФОТО работника</string>
 </resources>
