Резализовал октрытие главного меню из дочернего фрагмента, задал id элементам AppBarTop Реализовал интерфейс для вызова событий открытия главного меню в главной активити

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="lblFillReports">Заполнить отчет</string>
     <string name="lblOnMain">На главную</string>
     <string name="WorkerPhoto">ФОТО работника</string>
+    <string name="amicum_mobile">Amicum mobile</string>
 </resources>
