Подключен компонент навигации, настроен граф Обновлены зависимости AppBarTop сделан универсальным, добавлены кнопки и иконки Главное меню вынесено в отдельный фрагммент

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="lblOnMain">На главную</string>
     <string name="WorkerPhoto">ФОТО работника</string>
     <string name="amicum_mobile">Amicum mobile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
