--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="groupNotification">Групповые</string>
     <string name="personalNotification">Личные</string>
+    <string name="pabNotification">Вам выдан ПАБ №</string>
+    <string name="medicalNotification">Вам необходимо пройти медосмотр в период с</string>
+    <string name="checkKnowledgeNotification">Вам назначена аттестация</string>
+    <string name="briefingNotification">Вам необходимо пройти инструктаж</string>
+    <string name="po">по</string>
+    <string name="ot">от</string>
+    <string name="ppkPab">ППК ПАБ</string>
+    <string name="empty_server_response_on_success">Ответ с сервера пустой</string>
 </resources>
